# SkillEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SkillEditor.sln  SkillEditor.vcxproj  SkillEditor.vcxproj.filters  UI.cpp  dx-init.cpp  example_win32_directx9.vcxproj  issues.txt  main.cpp
include/: UI.h  dx-init.h  editors.h  font.h  imgui_markdown.h  main.h  setupUI.h  structs.h
include/crc32/: crc_32.c
res/: AttackSkillBody.txt  AttackSkillLabels.txt  SkillEditorBody.txt  SkillEditorLabels.txt  imgui-config.txt  labels.yaml
src/: CMakeLists.txt  UI.cpp  dx-init.cpp  editors.cpp  file.c  file.h  gui_loop.cxx  gui_loop.hxx  main.cpp  main.cxx  main.h  memory-editing.cpp  memory-editing.cxx  memory-editing.h  memory_editing.cxx  memory_editing.hxx  mods.cxx  mods.hxx  nfde_wrapper.cxx  nfde_wrapper.hxx  pool.c  pool.h  remote_pd.c  remote_pd.cxx  remote_pd.h  remote_pd.hxx  skill_editor.cxx  skill_editor.hxx  skill_io.cpp  skill_io.cxx  skill_io.h  structs.h  text.c  text.cpp  text.cxx  text.h  text.hxx  types.h  types.hxx  userlabels.cxx  (+5 more)
src/imgui/: UI.cpp  UI.h  d3d-api.cpp  editors.cpp  imgui_backend.cpp  imgui_backend.cxx  imgui_backend.h  imgui_backend.hxx  program-ui.cpp  program-ui.cxx  program-ui.h  program-ui.hxx
